fixed horizontal alignment

--- a/_sass/_skills.scss
+++ b/_sass/_skills.scss
@@ -3,13 +3,14 @@
 }
 
 .skill-box {
-  width: 4em;
+  //width: 4em;
   height: 4em;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 1.5em;
   line-height: 4em;
   img {
     max-width: 100%;
     max-height: 100%;
-    vertical-align: middle;
   }
 }
